@@ -1,3 +1,8 @@
+2010-05-04  Meteor Liu  <meteor1113@gmail.com>
+
+	* init-misc.el: Set auto-complete's ac-modes and
+	ac-dictionary-directories.
+
 2010-05-03  Meteor Liu  <meteor1113@gmail.com>
 
 	* init-site.el: Setting visual-studio-bookmarks.
